# clr-profiler

./: Cargo.toml  README.md
.cargo/: config.toml
air_327_fix/: Cargo.toml
air_327_fix/src/: lib.rs
clr_profiler/: Cargo.toml
clr_profiler/src/: ffi.rs  metadata_import.rs  types.rs
clr_profiler/src/cil/: instruction.rs
clr_profiler/src/ffi/class/: cor_profiler_callback.rs  metadata_import.rs
clr_profiler/src/traits/: metadata_import_trait.rs
load_test/: Cargo.toml
load_test/src/: lib.rs
log_init/: Cargo.toml
log_init/src/: lib.rs
profile/: Cargo.toml
profile/src/: main.rs
ssl_pin_bypass/: Cargo.toml
ssl_pin_bypass/src/: lib.rs
sslfix2/: Cargo.toml
test_profilers/: Cargo.toml
test_profilers/src/: basic_integration_test.rs  lib.rs
