[package]
name = "test_profilers"
version = "0.1.0"
authors = ["Camden Reslink <camdenreslink@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/camdenreslink/clr-profiler"

[dependencies]
clr_profiler = { version = "0.1.0", path = "../clr_profiler" }
log_init = { path = "../log_init" }
uuid = "0.8"
log = { workspace = true }
fern = "0.7.1"

[lib]
crate-type = ["cdylib"]
